<resources>
    <string name="app_name">SMS server</string>

    <string name="pref_key_server_switch">pref_key_server_switch</string>
    <string name="pref_key_port_no">pref_key_port_no</string>
    <string name="pref_key_send_sms_permission">pref_key_send_sms_permission</string>

    <string name="shared_pref_file">shared_pref_file</string>
    <string name="pref_key_secure_connection">pref_key_secure_connection</string>
    <string name="pref_key_password_switch">pref_key_password_switch</string>
    <string name="pref_key_password">pref_key_password</string>
    <string name="pref_key_hotspot">pref_key_hotspot</string>
    <string name="pref_key_hotspot_ip">pref_key_hotspot_ip</string>
</resources>